Fix for gap in Leaflet 0.5.1's arrays to Points conversion coverage

--- a/www/styles/map.css
+++ b/www/styles/map.css
@@ -7,6 +7,7 @@
 .leaflet-popup-content-wrapper, .leaflet-popup-tip {
   background-color: #000;
   line-height: normal;
+  border-radius: 1px;
 }
 .plug-popup {
   width: 180px;
